--- a/week4/week4spring/build.gradle
+++ b/week4/week4spring/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.11.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testCompile 'org.junit.jupiter:junit-jupiter-params:5.7.0'
-//    compile 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    compile 'org.junit.jupiter:junit-jupiter-api:5.7.2'
 }
 
 test {
